implement view customer list
