# docs/swagger.yaml
@@ -228,6 +228,27 @@ paths:
       summary: Creates a new company
       tags:
       - Company
+  /customer/all:
+    get:
+      description: Business Owner or Employee views all customers
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Customer'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get all customers
+      tags:
+      - Customer
   /customer/delete/{id}:
     delete:
       description: Business Owner or Employee deletes a customer
